--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ header {
 /* ====== */
 /* FOOTER */
 /* ====== */
-.test {
+footer {
   background-color: black;
   width: 100%;
   height: 200px;
