--- a/style.css
+++ b/style.css
@@ -176,36 +176,67 @@ header {
 /* =============== */
 .form-container {
   display: grid;
+  grid-template-columns: repeat(2, 45%);
   justify-content: center;
-  align-items: center;
   width: 100%;
 }
 
+.form-container-child {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
 .form-field {
-  outline: 0px;
+  outline: 0;
   border-radius: 5px;
   padding: 12px 20px;
-  margin: 8px 0;
   opacity: 0.8;
-  /*box-sizing: border-box;*/
+  box-sizing: border-box;
+  border-color: var(--mango-tango);
+  letter-spacing: 1.5;
   resize: none;
 }
 
-.form-field:focus {
-
-  /*box-sizing: border-box;*/
-}
-
 .name-field {
-  width: 75%;
+  width: 85%;
+  margin: 6px 0;
 }
 
 .email-field {
-  width: 75%;
+  width: 85%;
+  margin: 6px 0;
 }
 
 .message-field {
-  width: 80%;
+  width: 90%;
+  height: 100%;
+  border-width: 2px;
+  margin-left: 10%;
+}
+
+.submit-button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.submit-button {
+  color: black;
+  font-size: 17px;
+  background-color: transparent;
+  width: 75%;
+  height: 50px;
+  outline: none;
+  border: 2px solid var(--mango-tango);
+  border-radius: 10px;
+  transition: 0.5s ease-in-out;
+}
+
+.submit-button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: var(--mango-tango); 
 }
 
 /* ====== */
@@ -216,3 +247,7 @@ footer {
   width: 100%;
   height: 200px;
 }
+
+/* ===== */
+/* OTHER */
+/* ===== */
