--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ header {
 /* =============== */
 /* CONTACT SECTION */
 /* =============== */
-.form-container {
+/* .form-container {
   display: grid;
   grid-template-columns: repeat(2, 45%);
   justify-content: center;
@@ -225,7 +225,68 @@ header {
   color: black;
   font-size: 17px;
   background-color: transparent;
-  width: 75%;
+  width: 90%;
+  height: 50px;
+  outline: none;
+  border: 2px solid var(--mango-tango);
+  border-radius: 10px;
+  transition: 0.5s ease-in-out;
+}
+
+.submit-button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: var(--mango-tango); 
+} */
+
+.form-container {
+  display: flex;
+  width: 100%;
+  column-gap: 5%;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2%;
+}
+
+.form-container-child {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.form-field {
+  outline: none;
+  border-radius: 5px;
+  padding: 12px 20px;
+  opacity: 0.8;
+  border-color: var(--mango-tango);
+  letter-spacing: 1.5;
+  width: 65%;
+  resize: none;
+}
+
+.name-field {
+  margin: 2.5% 0; 
+}
+
+.email-field {
+  margin: 2.5% 0; 
+}
+
+.message-field {
+}
+
+.submit-button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.submit-button {
+  color: black;
+  font-size: 17px;
+  background-color: transparent;
+  width: 90%;
   height: 50px;
   outline: none;
   border: 2px solid var(--mango-tango);
