1. Improved File Structure

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('assets/fonts/Raleway-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/Raleway-Regular.ttf') format('truetype');
 }
 
 body {
