1. Started moving functions better suited for the server from the client to the server
2. Styled copyright text in footer

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -212,17 +212,6 @@ header {
   resize: none;
 }
 
-.name-field {
-}
-
-.email-field {
-  
-}
-
-.message-field {
-  display: block;
-}
-
 .submit-button-container {
   display: flex;
   justify-content: center;
@@ -245,6 +234,6 @@ footer {
   height: 200px;
 }
 
-/* ===== */
-/* OTHER */
-/* ===== */
+.copyright-text {
+  color: white;
+}
